--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -101,3 +101,18 @@
     transform: scale(1.1);
     box-shadow: 0 0 10px #d6cfe1;
 }
+@media (max-width: 768px) {
+    .contactform {
+        width: 90%;
+    }
+
+    .social {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .socialimg {
+        width: 50px;
+        height: 50px;
+    }
+}
