--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -82,3 +82,13 @@
     font-weight: 300;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+@media (max-width: 768px) {
+    .projects-row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .project-card {
+        width: 90%;
+    }
+}
