--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -77,3 +77,14 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+@media (max-width: 768px) {
+    .projects-row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .project-card {
+        width: 90%;
+    }
+}
